Add vercel.json file and improve meta data

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <meta name="keywords" content="books, book discovery, favorite books, reading list, book recommendations, book tracker, book app, find books, read books, book explorer, book quest, book collection, best books, book genres">
    
    <!-- Facebook Meta Tags -->
-   <meta property="og:url" content="https://bookquest.vercel.app">
+   <meta property="og:url" content="https://bookquest-eosin.vercel.app">
    <meta property="og:type" content="website">
    <meta property="og:title" content="BookQuest 📚 - Discover, Explore & Save Your Favorite Books">
    <meta property="og:description" content="Start your reading journey with BookQuest. Discover new books, explore genres, and build your personalized favorites list—all in one place. Your next great read is just a click away.">
@@ -24,13 +24,13 @@
    <!-- Twitter Meta Tags -->
    <meta name="twitter:card" content="summary_large_image">
    <meta property="twitter:domain" content="postmorph.vercel.app">
-   <meta property="twitter:url" content="https://bookquest.vercel.app">
+   <meta property="twitter:url" content="https://bookquest-eosin.vercel.app">
    <meta name="twitter:title" content="BookQuest 📚 - Discover, Explore & Save Your Favorite Books">
    <meta name="twitter:description" content="Start your reading journey with BookQuest. Discover new books, explore genres, and build your personalized favorites list—all in one place. Your next great read is just a click away.">
    <meta name="twitter:image" content="https://postmorph.vercel.app/postmorph-og-banner.png">
     
     <!-- Canonical Tag (Avoid Duplicate Content Issues) -->
-    <link rel="canonical" href="https://bookquest.vercel.app">
+    <link rel="canonical" href="https://bookquest-eosin.vercel.app">
     
     <!-- Standard Favicon -->
     <link rel="icon" href="/postmorph-logo.png" type="image/x-icon">
@@ -50,7 +50,7 @@
       "@context": "https://schema.org",
       "@type": "WebPage",
       "name": "BookQuest",
-      "url": "https://bookquest.vercel.app",
+      "url": "https://bookquest-eosin.vercel.app",
       "description": "Maximize your content’s potential by repurposing it across different formats. Save time and grow your audience with Postmorph",
       "publisher": {
         "@type": "Organization",
